fixed problem with product viewing text overlap picture

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,16 +65,16 @@ header {
 
 .img-size {
     float: left;
-    width:  300px;
-    height: 300px;
+    width:  20rem;
+    height: 20rem;
     object-fit: cover;
     overflow: hidden;
 }
 
 .img-size-detail {
     float: left;
-    width:  500px;
-    height: 500px;
+    width:  30rem;
+    height: 30rem;
     object-fit: cover;
     overflow: hidden;
 }
@@ -84,7 +84,7 @@ header {
 }
 
 .header-container {
-    padding-top: 150px;
+    padding-top: 1rem;
 }
 
 
